[Feature #160365600] Add javascript to link landing page

--- a/UI/css/landingPage.css
+++ b/UI/css/landingPage.css
@@ -59,6 +59,10 @@ h3 {
   margin: 1rem auto;
 }
 
+button {
+  cursor: pointer;
+}
+
 #get-started, #learn-more {
   border: none;
   outline: none;
