--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -35,7 +35,7 @@ nav{
   display: flex;
   justify-content: space-between;
 }
-#logo a, #large-width-nav a, #small-width-nav a, span {
+#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
   text-decoration: none;
   color: var(--primary);
   display: block;
@@ -63,7 +63,6 @@ nav{
   color: var(--dark);
   font-size: 1.3em;
   border-bottom: 2px solid var(--dark);
-  /* width: 100%; */
   display: block;
   margin: 0;
 }
@@ -71,7 +70,7 @@ nav{
   transform: translate(0, 0);
 }
 /* Design user details */
-#user-contianer {
+#user-container {
   height: calc(100vh - 80px);
 }
 #user-identify,
@@ -109,13 +108,58 @@ nav{
 #meal-number {
   color: var(--dark);
   display: inline;
-  /* font-size: 0.8em; */
+}
+/* Design filter-by */
+#filter-text {
+  text-align: center;
+  text-transform: capitalize;
+  background: var(--primary);
+  margin: 1.2em;
+  padding: 0.5em;
+  font-size: 1.5em;
+}
+#filter {
+  margin: 1.5em 0;
+}
+#filter input {
+  width: 95%;
+  margin: auto;
+  outline: none;
+  border: none;
+  padding: 0.5em;
+  border-radius: 4px;
+  display: block;
+  font-size: 1.5em;
+  font-family: 'Roboto Condensed', sans-serif;
+  margin-top: 0.2em;
+}
+#filter-by {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+#filter-by-detail {
+  width: 70%;
+  display: block;
+  font-size: 1.8em;
+  padding: 0.5em;
+  margin-top: 0.2em;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+#search {
+  color: var(--dark);
+  display: block;
+  width: 25%;
+  text-align: center;
+  font-size: 1.6em;
+  padding-top: 0.7em;
 }
 /* Meal offer details */
 .meals {
   background: var(--primary-light);
   height: 380px;
-  padding-top: 0.5em;
+  margin-top: 1em;
 }
 .meals img {
   height: 50%;
@@ -153,4 +197,40 @@ nav{
 .page a {
   text-decoration: none;
   color: var(--primary-light);
+}
+
+/* Design for screen widths larger than 350px */
+@media screen and (min-width: 350px) {
+  .meals, #filter input, #filter-by {
+    width: 90%;
+    margin: auto;
+  }
+  #filter input {
+    margin-top: 0.2em;
+  }
+  .meals {
+    margin-top: 1.5em;
+  }
+}
+@media screen and (min-width: 410px) {
+  #user-identify {
+    width: 80%;
+    margin: auto;
+  }
+  #user-actions {
+    padding: 1em 4em;
+  }
+  #list-user-actions {
+    font-size: 1.8em;
+  }
+  nav {
+    padding: 0.5em 2.0em;
+  }
+  #hamburger, #logo {
+    padding: 0;
+    font-size: 1.4em;
+  }
+  #hamburger {
+    padding: 0.3em;
+  }
 }
