--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -35,6 +35,7 @@ nav{
   display: flex;
   justify-content: space-between;
 }
+
 #logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
   text-decoration: none;
   color: var(--primary);
@@ -49,8 +50,16 @@ nav{
   border: 2px solid var(--primary-light);
   align-self: center;
 }
+#large-width-nav #active {
+  background: var(--primary-light);
+  color: var(--dark)
+}
 #large-width-nav {
   display: none;
+}
+#large-width-nav a:hover {
+  background: var(--primary);
+  color: var(--dark);
 }
 #small-width-nav {
   position: absolute;
@@ -132,6 +141,7 @@ nav{
   font-size: 1.5em;
   font-family: 'Roboto Condensed', sans-serif;
   margin-top: 0.2em;
+  color: var(--dark);
 }
 #filter-by {
   width: 95%;
@@ -145,6 +155,7 @@ nav{
   font-size: 1.8em;
   padding: 0.5em;
   margin-top: 0.2em;
+  color: var(--dark);
   font-family: 'Roboto Condensed', sans-serif;
 }
 #search {
@@ -217,6 +228,9 @@ nav{
     width: 80%;
     margin: auto;
   }
+  #user-container {
+    margin-bottom: 2em;
+  }
   #user-actions {
     padding: 1em 4em;
   }
@@ -228,9 +242,251 @@ nav{
   }
   #hamburger, #logo {
     padding: 0;
-    font-size: 1.4em;
+    font-size: 1em;
   }
   #hamburger {
     padding: 0.3em;
+  }
+}
+@media screen and (min-width: 470px) {
+  /* Design user action */
+  #user-container {
+    display: flex;
+    flex-direction: column;
+    height: unset;
+    padding: 0.5em;
+    margin: 0.8em;
+    border-radius: 8px;
+    background: var(--light);
+  }
+  #user-identify, #list-user-actions, #user-actions {
+    margin: 0;
+    padding: 0;
+    font-size: 1.2em;
+  }
+  #user-identify {
+    display: flex;
+    justify-content: center;
+    margin: 1.2em auto;
+    width: 90%;
+  }
+  #user-identify img {
+    width: 35%;
+  }
+  #user-identify-text {
+    flex-grow: 1;
+    align-self: center;
+    font-size: 1.3em;
+  }
+  #user-actions {
+    background: unset;
+  }
+  #meal-number {
+    margin: 0;
+  }
+  #list-user-actions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 90%;
+    margin: auto;
+  }
+  #list-user-actions li {
+    width: 50%;
+    padding: 0.2em;
+  }
+  /* Design filter */
+  .meals, #filter input, #filter-by {
+    width: 80%;
+    margin: auto;
+  }
+  #filter input {
+    margin-top: 0.2em;
+  }
+  .meals {
+    margin-top: 1.5em;
+  }
+  #filter-text h2{
+    margin-top: 1em;
+  }
+  #filter-text {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 530px) {
+  #filter-text {
+    margin-top:0;
+    padding-top: 0.5em
+  }
+  #filter-text {
+    padding: 0;
+    margin: 1em;
+  }
+  #filter-text h2 {
+    margin-top: 0;
+    padding-top: 0.5em
+  }
+  .meals {
+   margin: 1.2em auto;
+   width: 48%;
+   height: 400px;
+  }
+  .meals img {
+    height: 40%;
+  }
+  .meal-details {
+    padding: 1em;
+  }
+  #meals-ordered {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  } 
+  #filter input, #filter-by {
+    width: 93%;
+    margin: auto;
+  }
+  #filter input {
+    margin-top: 0.2em;
+  }
+  .meals {
+    margin-top: 1.5em;
+  }
+}
+@media screen and (min-width: 630px) {
+  #user-container {
+    width: 80%;
+    margin: 1.3em auto;
+  }
+  #meals-ordered {
+    width: 90%;
+    margin: auto;
+  }
+  #filter input, #filter-by {
+    width: 80%;
+    margin: auto;
+  }
+  #filter input {
+    margin-top: 0.2em;
+  }
+  .meals {
+    margin-top: 1.5em;
+  }
+  .meals img {
+    height: 45%;
+  }
+  #hamburger, #small-width-nav {
+    display: none;
+  }
+  #large-width-nav {
+    display: block;
+  }
+  #large-width-nav a {
+    display: inline-block;
+  }
+}
+@media screen and (min-width: 700px) {
+  .meals img {
+    height: 45%;
+  }
+  #user-identify img {
+    width: 25%;
+  }
+}
+@media screen and (min-width: 840px) {
+  #user-container {
+    flex-direction: row;
+    width: 85%;
+  }
+  #user-identify, #user-actions {
+    width: 50%;
+  }
+  #user-actions {
+    margin-top: 2em;
+  }
+  #user-identify-text {
+    font-size: 1em;
+  }
+  #user-identify img {
+    width: 150px;
+    height: 150px;
+  }
+  #list-user-actions {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  #list-user-actions li {
+    width: 48%;
+    align-self: center;
+    height: 3em;
+  }
+}
+@media screen and (min-width: 860px) {
+  /* Design navigation */
+  #large-width-nav a {
+    font-size: 1.3em;
+  }
+  /* Design filter */
+  #filter {
+    display: flex;
+    width: 95%;
+    margin: auto;
+  }
+  #filter-by {
+    width: 40%;
+    justify-content: flex-start;
+  }
+  #filter-input {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    justify-content: flex-start;
+  }
+  #filter input {
+    display: inline-block;
+    width: 49%;
+    height: 3em;
+  }
+  #filter-by-detail {
+    height: 2.7em;
+    padding: 0.5em;
+    width: 70%;
+  }
+  #search {
+    padding-left: 0.3em;
+  }
+  .meals {
+    width: 33%;
+  }
+  #meals-ordered {
+    width: 95%;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 910px) {
+  nav {
+    padding: 0 2em;
+  }
+  #large-width-nav a {
+    margin: 0 0.5em;
+    padding: 1em;
+  }
+  #user-details, #filter-container {
+    width: 80%;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 1080px) {
+  #meals-ordered {
+    width: 80%;
+  }
+  .meals {
+    width: 31%;
+  }
+  #filter {
+    width: 93%;
+    margin: auto;
   }
 }
