--- a/UI/css/mealsOrdered.css
+++ b/UI/css/mealsOrdered.css
@@ -2,7 +2,7 @@
 /* DEsigned for 320px min width */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-
+/* Globals */
 :root {
   --light: #f0ece2;
   --dark: #596e79;
@@ -25,6 +25,10 @@ body {
 h1,p,h2 {
   margin: 0;
 }
+.container {
+  width: 75%;
+  margin: auto;
+}
 /* Navigation */
 nav{
   background: var(--dark);
@@ -32,7 +36,6 @@ nav{
   display: flex;
   justify-content: space-between;
 }
-
 #logo a {
   text-decoration: none;
   color: var(--primary);
@@ -45,7 +48,47 @@ nav{
   border: 2px solid var(--primary-light);
   align-self: center;
 }
-
+/* meal search */
+#search-meal-container {
+  margin: 3.5em 0;
+}
+#search-meal-container input {
+  width: 60%;
+  height: 3em;
+  font: 'Roboto Condensed', sans-serif;
+  color: var(--dark);
+  padding: 8px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  text-transform: capitalize;
+}
+#search-meal-icon {
+  display: inline-block;
+  width: 8%;
+  font-size: 1.8em;
+  text-align: center;
+}
+#filter {
+  height: 2.5em;
+  border: none;
+  outline: none;
+  padding: 4px;
+  border-radius: 6px;
+  font-size: 1.2em;
+}
+/* meral ordered card */
+/* footer */
+#footer {
+  text-align: center;
+  background: var(--dark);
+  color: var(--primary-light);
+  font-size: 1.3em;
+  padding: 0.5em;
+}
+#footer p {
+  margin: 0;
+}
 @media screen and (min-width: 910px) { 
   nav {
     padding: 0 2em;
