--- a/UI/css/mealsOrdered.css
+++ b/UI/css/mealsOrdered.css
@@ -87,6 +87,7 @@ nav{
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  margin-bottom: 1.5em;
 }
 .meal-cards {
   background: var(--primary-light);
@@ -105,6 +106,26 @@ nav{
 }
 .card-body {
   padding: 0.5em 1em;
+}
+/* paginate */
+#paginate {
+  text-align: center;
+  margin: 2em 0;
+  display: flex;
+  justify-content: center;
+}
+.page {
+  display: inline-block;
+  font-size: 1em;
+  padding: 0.3em;
+  width: 1.8em;
+  margin-right: 2%;
+  background: var(--dark);
+  color: var(--primary-light);
+  border-radius: 50%;
+}
+.page a {
+  color: var(--primary-light);
 }
 /* footer */
 #footer {
