--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -171,6 +171,7 @@ nav{
   background: var(--primary-light);
   height: 380px;
   margin-top: 1em;
+  border-radius: 10px;
 }
 .meals img {
   height: 50%;
@@ -181,7 +182,7 @@ nav{
 }
 .meal-details p {
   color: var(--dark);
-  font-size: 1.8em;
+  font-size: 1.3em;
   margin-top: 0.3em;
 }
 .meal-property {
@@ -193,20 +194,22 @@ nav{
 }
 /* pagination */
 #paginate {
-  background: var(--primary);
   text-align: center;
-  font-size: 1.4em;
+  margin: 2em 0;
+  display: flex;
+  justify-content: center;
 }
 .page {
-  color: var(--primary-light);
-  background: var(--dark);
   display: inline-block;
-  padding: 0.7em;
-  margin: 0.4em 0.2em;
-  border-radius: 60%;
+  font-size: 1em;
+  padding: 0.3em;
+  width: 2em;
+  margin-right: 2%;
+  background: var(--dark);
+  color: var(--primary-light);
+  border-radius: 50%;
 }
 .page a {
-  text-decoration: none;
   color: var(--primary-light);
 }
 /* footer */
@@ -307,7 +310,7 @@ nav{
   }
   /* Design filter */
   .meals, #filter input, #filter-by {
-    width: 80%;
+    width: 70%;
     margin: auto;
   }
   #filter input {
@@ -315,6 +318,10 @@ nav{
   }
   .meals {
     margin-top: 1.5em;
+    height: 350px;
+  }
+  .meal-details {
+    padding-top: 1.3em;
   }
   #filter-text h2{
     margin-top: 1em;
@@ -325,10 +332,6 @@ nav{
 }
 @media screen and (min-width: 530px) {
   #filter-text {
-    margin-top:0;
-    padding-top: 0.5em
-  }
-  #filter-text {
     padding: 0;
     margin: 1em;
   }
@@ -338,8 +341,8 @@ nav{
   }
   .meals {
    margin: 1.2em auto;
-   width: 48%;
-   height: 400px;
+   width: 43%;
+   height: 320px;
   }
   .meals img {
     height: 40%;
@@ -351,9 +354,11 @@ nav{
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
+    width: 85%;
+    margin: auto;
   } 
   #filter input, #filter-by {
-    width: 93%;
+    width: 70%;
     margin: auto;
   }
   #filter input {
@@ -369,21 +374,16 @@ nav{
     margin: 1.3em auto;
   }
   #meals-ordered {
-    width: 90%;
-    margin: auto;
-  }
-  #filter input, #filter-by {
     width: 80%;
     margin: auto;
   }
-  #filter input {
-    margin-top: 0.2em;
-  }
   .meals {
     margin-top: 1.5em;
+    height: 300px;
+    width: 40%;
   }
   .meals img {
-    height: 45%;
+    height: 40%;
   }
   #hamburger, #small-width-nav {
     display: none;
@@ -462,7 +462,7 @@ nav{
     height: 3em;
   }
   #filter-by-detail {
-    height: 2.7em;
+    height: 2.5em;
     padding: 0.5em;
     width: 70%;
   }
@@ -470,7 +470,8 @@ nav{
     padding-left: 0.3em;
   }
   .meals {
-    width: 33%;
+    width: 31%;
+    height: 300px;
   }
   #meals-ordered {
     width: 95%;
@@ -481,9 +482,13 @@ nav{
   nav {
     padding: 0 2em;
   }
-  #user-details, #filter-container {
+  #filter-container, #user-container {
     width: 80%;
     margin: auto;
+  }
+  #user-container {
+    margin-top: 2em;
+    padding-left: 1.5em;
   }
 }
 @media screen and (min-width: 1080px) {
@@ -492,6 +497,7 @@ nav{
   }
   .meals {
     width: 31%;
+    height: 300px;
   }
   #filter {
     width: 93%;
