--- a/UI/css/orderFoodPage.css
+++ b/UI/css/orderFoodPage.css
@@ -22,7 +22,7 @@ body {
   color: var(--dark);
   font-family: 'Roboto Condensed', sans-serif; 
 }
-h1,p,h2 {
+h1,p,h3 {
   margin: 0;
 }
 img {
@@ -35,7 +35,6 @@ nav{
   display: flex;
   justify-content: space-between;
 }
-
 #logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
   text-decoration: none;
   color: var(--primary);
@@ -77,6 +76,49 @@ nav{
 }
 #small-width-nav.open {
   transform: translate(0, 0);
+}
+/* header-text */
+#heading {
+  margin: 2em auto;
+  text-align: center;
+}
+#heading h1, #heading h3 {
+  margin-bottom: 1em;
+}
+/* form-header-text */
+#form-header-text {
+  text-align: left;
+  text-transform: capitalize;
+  font-size: 1.1em;
+  margin: 0.8em 0;
+}
+/* Order form */
+#order-form-container {
+  width: 90%;
+  margin: auto;
+}
+input, select, button, textarea {
+  width: 100%;
+  height: 3em;
+  margin: auto;
+  outline: none;
+  border: none;
+  display: block;
+  margin-bottom: 1em;
+  border-radius: 8px;
+  padding: 0.5em;
+  font-size: 1.1em;
+}
+label {
+  font-size: 1.4em;
+}
+textarea {
+  font-size: 1.3em;
+  height: 6em;
+}
+button {
+  background: var(--dark);
+  color: var(--primary-light);
 }
 /* footer */
 #footer {
