--- a/UI/css/orderFoodPage.css
+++ b/UI/css/orderFoodPage.css
@@ -31,7 +31,6 @@ img {
 /* Dsign navigation */
 nav{
   background: var(--dark);
-  padding: 0.5em;
   display: flex;
   justify-content: space-between;
 }
@@ -89,7 +88,7 @@ nav{
 #form-header-text {
   text-align: left;
   text-transform: capitalize;
-  font-size: 1.1em;
+  font-size: 1.3em;
   margin: 0.8em 0;
 }
 /* Order form */
@@ -130,4 +129,57 @@ button {
 }
 #footer p {
   margin: 0;
+}
+
+@media screen and (min-width: 360px) {
+  #order-form-container {
+    width: 85%;
+    margin: auto;
+  }
+  #heading {
+    width: 85%;
+    margin: 2em auto;
+  }
+}
+@media screen and (min-width: 440px) {
+  #order-form-container {
+    width: 75%;
+    margin: auto;
+  }
+  #heading {
+    width: 75%;
+    margin: 2em auto;
+  }
+}
+@media screen and (min-width: 500px) {
+  #order-form, #form-header-text {
+    width: 85%;
+    margin: auto;
+  }
+  #form-header-text {
+    margin: 0.8em auto;
+  }
+}
+@media screen and (min-width: 630px) {
+  #hamburger, #small-width-nav {
+    display: none;
+  }
+  #large-width-nav {
+    display: block;
+  }
+  #large-width-nav a {
+    display: inline-block;
+    margin: 0 0.5em;
+    padding: 1.2em;
+  }
+}
+@media screen and (min-width: 640px) {
+  #heading, #order-form-container {
+    width: 476px;
+    margin: auto;
+  }
+  #heading{
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
 }
