--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -31,11 +31,9 @@ img {
 /* Dsign navigation */
 nav{
   background: var(--dark);
-  padding: 0.5em;
   display: flex;
   justify-content: space-between;
 }
-
 #logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
   text-decoration: none;
   color: var(--primary);
@@ -251,7 +249,7 @@ nav{
     font-size: 1.8em;
   }
   nav {
-    padding: 0.5em 2.0em;
+    padding: 0 2.0em;
   }
   #hamburger, #logo {
     padding: 0;
@@ -394,7 +392,7 @@ nav{
   #large-width-nav a {
     display: inline-block;
     margin: 0 0.5em;
-    padding: 1em;
+    padding: 1.2em;
   }
 }
 @media screen and (min-width: 700px) {
@@ -436,10 +434,6 @@ nav{
   }
 }
 @media screen and (min-width: 860px) {
-  /* Design navigation */
-  #large-width-nav a {
-    font-size: 1.3em;
-  }
   /* Design filter */
   #filter {
     display: flex;
