--- a/UI/css/availableOrders.css
+++ b/UI/css/availableOrders.css
@@ -2,7 +2,7 @@
 /* DEsigned for 320px min width */
 
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
-/* Globals */
+
 :root {
   --light: #f0ece2;
   --dark: #596e79;
@@ -12,7 +12,7 @@
 * {
   box-sizing: border-box;
 }
-html,body{
+html,body {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -20,10 +20,13 @@ html,body{
 body {
   background: var(--light);
   color: var(--dark);
-  font-family: 'Roboto Condensed', sans-serif; 
+  font-family: 'Roboto Condensed', sans-serif;
 }
-h1,p,h2,h3 {
+h1,p,h3,h2{
   margin: 0;
+}
+img {
+  max-width: 100%;
 }
 .container {
   width: 75%;
@@ -111,13 +114,27 @@ nav{
   padding: 4px;
   border-radius: 6px;
   font-size: 1.2em;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: var(--dark);
 }
 /* meal ordered card */
 #ordered-meal-text {
+  width: 95%;
   margin-top: 1em;
   padding: 1em 0;
   font-size: 1.2em;
   text-transform: capitalize;
+  display: flex;
+  justify-content: space-between;
+}
+#ordered-meal-text h3 {
+  padding: 0.5em;
+}
+#add-order {
+  color: var(--primary-light);
+  background: #8acc8a;
+  border-radius: 8px;
+  cursor: pointer;
 }
 #meal-card-container {
   display: flex;
@@ -130,7 +147,8 @@ nav{
   border-radius: 8px;
   width: 30%;
   margin-right: 3%;
-  margin-top: 1em
+  margin-top: 1em;
+  text-transform: capitalize;
 }
 .card-heading {
   border-bottom: 1px solid var(--dark);
@@ -163,9 +181,11 @@ button {
   color: var(--primary-light);
   border-radius: 8px;
   text-transform: capitalize;
+  cursor: pointer;
 }
-.accept {
+.edit {
   background: #538f53;
+  width: 4em;
 }
 .decline {
   background: #914a4a;
@@ -190,6 +210,63 @@ button {
 .page a {
   color: var(--primary-light);
 }
+/* modal */
+#addOrder-modal-container {
+  background: rgba(0,0,0,0.5);
+  color: var(--dark);
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  -webkit-transition: display 5s ease;
+  transition: display 5s ease;
+}
+#modal-container {
+  padding: 1em;
+  width: 335px;
+  height: 508px;
+  font-size: 1.3em;
+  overflow-y: auto;
+  margin: auto;
+  margin-top: 2em;
+}
+#modal-content {
+  background: var(--primary-light);
+  padding: 1em;
+  border-radius: 8px;
+}
+#modal-content input {
+  width: 90%;
+  outline: none;
+  border: none;
+  padding: 8px;
+  margin: 0.2em auto;;
+  border-radius: 6px;
+  display: block;
+  text-transform: capitalize;
+}
+#modal-content button {
+  width: 80%;
+  margin: 0.6em auto;
+  display: block;
+}
+#cancel-meal{
+  background: #914a4a;
+  color: var(--primary-light);
+}
+#create-meal{
+  background: #538f53;
+  color: var(--primary-light);
+}
+#close-container {
+  text-align: right;
+  font-size: 1.8em;
+  color: #914a4a;
+  cursor: pointer;
+}
 /* footer */
 #footer {
   text-align: center;
@@ -197,49 +274,15 @@ button {
   color: var(--dark);
   font-size: 1.3em;
   padding: 0.5em;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  position: fixed;
 }
 #footer p {
   margin: 0;
 }
-@media screen and (min-width: 910px) { 
-  nav {
-    padding: 0 2em;
-  }
-}
-@media screen and (max-width: 1050px) {
-  .card-footer {
-    width: 70%;
-  }
-  h2{
-    font-size: 1.2em;
-  }
-}
-@media screen and (max-width: 960px) {
-  h2 {
-    font-size: 1em;
-  }
-}
-@media screen and (max-width: 860px) {
-  .container {
-    width: 85%;
-    margin: auto;
-  }
-  #meal-card-container {
-    justify-content: space-evenly;
-  }
-  .card-footer {
-    width: 80%;
-  }
-}
-@media screen and (max-width: 780px) {
-  .container {
-    width: 90%;
-  }
-}
+
 @media screen and (min-width: 630px) {
   #hamburger, #small-width-nav {
     display: none;
@@ -254,58 +297,5 @@ button {
   }
   #logo {
     margin: 0 2em;
-  }
-}
-@media screen and (max-width: 670px) {
-  .container {
-    width: 80%;
-  }
-  .meal-cards {
-    width: 45%;
-  }
-}
-@media screen and (max-width: 580px) {
-  #search-meal-card-container input {
-    width: 50%;
-  }
-}
-@media screen and (max-width: 536px) {
-  .container {
-    width: 90%;
-  }
-}
-@media screen and (max-width: 480px) {
-  .container {
-    width: 70%;
-  }
-  .meal-cards {
-    width: 80%;
-  }
-  .meal-property {
-    font-size: 1.3em;
-  }
-  .card-footer {
-    width: 65%;
-  }
-  #search-meal-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-  }
-  #filter {
-    width: 80%;
-    margin-top: 0.5em;
-  }
-  #search-meal-container input {
-    width: 60%;
-  }
-  #search-meal-icon {
-    width: 10%;
-    align-self: center;
-  }
-}
-@media screen and (max-width: 385px) {
-  .container {
-    width: 90%;
   }
 }
