--- a/UI/css/orderFoodPage.css
+++ b/UI/css/orderFoodPage.css
@@ -18,9 +18,9 @@ html,body {
   height: 100%;
 }
 body {
-  background: var(--primary);
+  background: var(--light);
   color: var(--dark);
-  font-family: 'Roboto Condensed', sans-serif; 
+  font-family: 'Roboto Condensed', sans-serif;
 }
 h1,p,h3 {
   margin: 0;
@@ -30,13 +30,13 @@ img {
 }
 /* Dsign navigation */
 nav{
-  background: var(--dark);
+  background: var(--primary);
   display: flex;
   justify-content: space-between;
 }
-#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
+#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number, #logout {
   text-decoration: none;
-  color: var(--primary);
+  color: var(--dark);
   display: block;
   padding: 0.5em;
   margin: 0.5em;
@@ -45,19 +45,25 @@ nav{
   text-transform: capitalize;
 }
 #logo a {
-  border: 2px solid var(--primary-light);
+  border: 2px solid var(--dark);
   align-self: center;
+}
+#logout {
+  background: var(--primary);
+  color: var(--dark);
+  margin: 0 2em;
+  padding: 1.3em;
 }
 #large-width-nav #active {
   background: var(--primary-light);
   color: var(--dark)
 }
-#large-width-nav {
+#large-width-nav, #logout {
   display: none;
 }
-#large-width-nav a:hover {
-  background: var(--primary);
-  color: var(--dark);
+#large-width-nav a:hover, #logout:hover {
+  background: var(--dark);
+  color: var(--primary);
 }
 #small-width-nav {
   position: absolute;
@@ -76,14 +82,6 @@ nav{
 #small-width-nav.open {
   transform: translate(0, 0);
 }
-/* header-text */
-#heading {
-  margin: 2em auto;
-  text-align: center;
-}
-#heading h1, #heading h3 {
-  margin-bottom: 1em;
-}
 /* form-header-text */
 #form-header-text {
   text-align: left;
@@ -94,11 +92,14 @@ nav{
 /* Order form */
 #order-form-container {
   width: 90%;
-  margin: auto;
+  margin: 10vh auto;
+  padding: 2em 1em;
+  background: var(--primary-light);
+  border-radius: 8px;
 }
 input, select, button, textarea {
   width: 100%;
-  height: 3em;
+  height: 2em;
   margin: auto;
   outline: none;
   border: none;
@@ -106,26 +107,37 @@ input, select, button, textarea {
   margin-bottom: 1em;
   border-radius: 8px;
   padding: 0.5em;
-  font-size: 1.1em;
+  font-size: 1em;
+  background: var(--light);
+  color: var(--dark);
+  font-family: 'Roboto Condensed', sans-serif;
 }
 label {
   font-size: 1.4em;
 }
+#prize {
+  background: none;
+}
 textarea {
   font-size: 1.3em;
-  height: 6em;
+  height: 3em;
 }
 button {
   background: var(--dark);
   color: var(--primary-light);
+  text-transform: capitalize;
 }
 /* footer */
 #footer {
   text-align: center;
-  background: var(--dark);
-  color: var(--primary-light);
+  background: var(--primary);
+  color: var(--dark);
   font-size: 1.3em;
   padding: 0.5em;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 #footer p {
   margin: 0;
@@ -134,21 +146,11 @@ button {
 @media screen and (min-width: 360px) {
   #order-form-container {
     width: 85%;
-    margin: auto;
-  }
-  #heading {
-    width: 85%;
-    margin: 2em auto;
   }
 }
 @media screen and (min-width: 440px) {
   #order-form-container {
     width: 75%;
-    margin: auto;
-  }
-  #heading {
-    width: 75%;
-    margin: 2em auto;
   }
 }
 @media screen and (min-width: 500px) {
@@ -164,22 +166,18 @@ button {
   #hamburger, #small-width-nav {
     display: none;
   }
-  #large-width-nav {
+  #large-width-nav, #logout {
     display: block;
   }
   #large-width-nav a {
     display: inline-block;
     margin: 0 0.5em;
-    padding: 1.2em;
+    padding: 1.3em;
   }
 }
 @media screen and (min-width: 640px) {
-  #heading, #order-form-container {
-    width: 476px;
-    margin: auto;
+  #order-form-container {
+    width: 30%;
   }
-  #heading{
-    margin-top: 2em;
-    margin-bottom: 2em;
-  }
+  
 }
