--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -18,7 +18,7 @@ html,body {
   height: 100%;
 }
 body {
-  background: var(--primary);
+  background: var(--light);
   color: var(--dark);
   font-family: 'Roboto Condensed', sans-serif; 
 }
@@ -28,15 +28,18 @@ h1,p,h2 {
 img {
   max-width: 100%;
 }
+#page-container {
+  margin-bottom: 4em;
+}
 /* Dsign navigation */
 nav{
-  background: var(--dark);
+  background: var(--primary);
   display: flex;
   justify-content: space-between;
 }
-#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number {
+#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number, #logout {
   text-decoration: none;
-  color: var(--primary);
+  color: var(--dark);
   display: block;
   padding: 0.5em;
   margin: 0.5em;
@@ -45,19 +48,25 @@ nav{
   text-transform: capitalize;
 }
 #logo a {
-  border: 2px solid var(--primary-light);
+  border: 2px solid var(--dark);
   align-self: center;
+}
+#logout {
+  background: var(--primary);
+  color: var(--dark);
+  margin: 0 1em;
+  padding: 1.3em;
 }
 #large-width-nav #active {
   background: var(--primary-light);
   color: var(--dark)
 }
-#large-width-nav {
+#large-width-nav, #logout {
   display: none;
 }
-#large-width-nav a:hover {
-  background: var(--primary);
-  color: var(--dark);
+#large-width-nav a:hover, #logout:hover {
+  background: var(--dark);
+  color: var(--primary);
 }
 #small-width-nav {
   position: absolute;
@@ -121,7 +130,7 @@ nav{
   text-align: center;
   text-transform: capitalize;
   background: var(--primary);
-  margin: 1.2em;
+  margin: 1.2em auto;
   padding: 0.5em;
   font-size: 1.5em;
 }
@@ -129,20 +138,19 @@ nav{
   margin: 1.5em 0;
 }
 #filter input {
-  width: 95%;
-  margin: auto;
+  width: 90%;
+  margin: 0.4em auto;
   outline: none;
   border: none;
-  padding: 0.5em;
-  border-radius: 4px;
+  padding: 0.3em;
+  border-radius: 6px;
   display: block;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-family: 'Roboto Condensed', sans-serif;
-  margin-top: 0.2em;
   color: var(--dark);
 }
 #filter-by {
-  width: 95%;
+  width: 90%;
   margin: auto;
   display: flex;
   justify-content: space-between;
@@ -150,9 +158,11 @@ nav{
 #filter-by-detail {
   width: 70%;
   display: block;
-  font-size: 1.8em;
-  padding: 0.5em;
-  margin-top: 0.2em;
+  font-size: 1.3em;
+  padding: 0.3em;
+  margin-top: 0.4em;
+  border-radius: 6px;
+  border: none;
   color: var(--dark);
   font-family: 'Roboto Condensed', sans-serif;
 }
@@ -160,15 +170,22 @@ nav{
   color: var(--dark);
   display: block;
   width: 25%;
+  align-self: center;
+  font-size: 1.3em;
+  padding: 0.3em;
+  margin-top: 0.4em;
   text-align: center;
-  font-size: 1.6em;
-  padding-top: 0.7em;
 }
 /* Meal offer details */
+#meals-ordered {
+  width: 90%;
+  margin: auto;
+  margin-bottom: 2em;
+}
 .meals {
   background: var(--primary-light);
-  height: 380px;
-  margin-top: 1em;
+  min-height: 380px;
+  margin-top: 1.5em;
   border-radius: 10px;
 }
 .meals img {
@@ -213,27 +230,19 @@ nav{
 /* footer */
 #footer {
   text-align: center;
-  background: var(--dark);
-  color: var(--primary-light);
+  background: var(--primary);
+  color: var(--dark);
   font-size: 1.3em;
   padding: 0.5em;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 #footer p {
   margin: 0;
 }
-/* Design for screen widths larger than 350px */
-@media screen and (min-width: 350px) {
-  .meals, #filter input, #filter-by {
-    width: 90%;
-    margin: auto;
-  }
-  #filter input {
-    margin-top: 0.2em;
-  }
-  .meals {
-    margin-top: 1.5em;
-  }
-}
+/* Design for screen widths larger than 410px */
 @media screen and (min-width: 410px) {
   #user-identify {
     width: 80%;
@@ -282,7 +291,7 @@ nav{
     width: 90%;
   }
   #user-identify img {
-    width: 35%;
+    width: 30%;
   }
   #user-identify-text {
     flex-grow: 1;
@@ -307,40 +316,17 @@ nav{
     padding: 0.2em;
   }
   /* Design filter */
-  .meals, #filter input, #filter-by {
-    width: 70%;
+  #meals-ordered, #filter {
+    width: 75%;
     margin: auto;
   }
-  #filter input {
-    margin-top: 0.2em;
-  }
-  .meals {
-    margin-top: 1.5em;
-    height: 350px;
-  }
-  .meal-details {
-    padding-top: 1.3em;
-  }
-  #filter-text h2{
-    margin-top: 1em;
-  }
-  #filter-text {
-    margin: 0;
+  #meals-ordered {
+    margin-bottom: 2em;
   }
 }
 @media screen and (min-width: 530px) {
-  #filter-text {
-    padding: 0;
-    margin: 1em;
-  }
-  #filter-text h2 {
-    margin-top: 0;
-    padding-top: 0.5em
-  }
   .meals {
-   margin: 1.2em auto;
-   width: 43%;
-   height: 320px;
+   width: 48%;
   }
   .meals img {
     height: 40%;
@@ -350,20 +336,9 @@ nav{
   }
   #meals-ordered {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-wrap: wrap;
-    width: 85%;
-    margin: auto;
-  } 
-  #filter input, #filter-by {
-    width: 70%;
-    margin: auto;
-  }
-  #filter input {
-    margin-top: 0.2em;
-  }
-  .meals {
-    margin-top: 1.5em;
+    width: 95%;
   }
 }
 @media screen and (min-width: 630px) {
@@ -372,8 +347,16 @@ nav{
     margin: 1.3em auto;
   }
   #meals-ordered {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 2em;
+  }
+  #filter input, #filter-by {
     width: 80%;
     margin: auto;
+  }
+  #filter input {
+    margin-top: 0.2em;
   }
   .meals {
     margin-top: 1.5em;
@@ -386,16 +369,36 @@ nav{
   #hamburger, #small-width-nav {
     display: none;
   }
-  #large-width-nav {
+  #large-width-nav, #logout {
     display: block;
   }
   #large-width-nav a {
     display: inline-block;
     margin: 0 0.5em;
-    padding: 1.2em;
+    padding: 1.3em;
   }
 }
 @media screen and (min-width: 700px) {
+  #user-container {
+    width: 95%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  #list-user-actions {
+    width: 100%;
+  }
+  #list-user-actions li {
+    height: unset;
+    display: block;
+    text-align: center;
+  }
+  #meal-number {
+    display: block;
+    text-align: center;
+    font-size: 1.3em;
+    padding: 0;
+  }
   .meals img {
     height: 45%;
   }
@@ -405,32 +408,7 @@ nav{
 }
 @media screen and (min-width: 840px) {
   #user-container {
-    flex-direction: row;
-    width: 85%;
-  }
-  #user-identify, #user-actions {
-    width: 50%;
-  }
-  #user-actions {
-    margin-top: 2em;
-  }
-  #user-identify-text {
-    font-size: 1em;
-  }
-  #user-identify img {
-    width: 150px;
-    height: 150px;
-  }
-  #list-user-actions {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  #list-user-actions li {
-    width: 48%;
-    align-self: center;
-    height: 3em;
+    width: 80%;
   }
 }
 @media screen and (min-width: 860px) {
@@ -453,15 +431,13 @@ nav{
   #filter input {
     display: inline-block;
     width: 49%;
-    height: 3em;
+    height: 2em;
   }
   #filter-by-detail {
-    height: 2.5em;
-    padding: 0.5em;
-    width: 70%;
+    height: 2em;
   }
   #search {
-    padding-left: 0.3em;
+    font-size: 1em;
   }
   .meals {
     width: 31%;
@@ -470,24 +446,18 @@ nav{
   #meals-ordered {
     width: 95%;
     margin: auto;
+    margin-bottom: 2em;
   }
 }
-@media screen and (min-width: 910px) {
-  nav {
-    padding: 0 2em;
-  }
-  #filter-container, #user-container {
-    width: 80%;
-    margin: auto;
-  }
+@media screen and (min-width: 1020px) {
   #user-container {
-    margin-top: 2em;
-    padding-left: 1.5em;
+    width: 70%;
+    padding-left: 3em;
   }
 }
 @media screen and (min-width: 1080px) {
   #meals-ordered {
-    width: 80%;
+    width: 90%;
   }
   .meals {
     width: 31%;
