improve UI on about page

--- a/UI/css/aboutPage.css
+++ b/UI/css/aboutPage.css
@@ -295,7 +295,11 @@ button {
     margin-left: 3em;
     font-size: 1.8em;
   }
-  #logo,#reason-to-choose,#accolade,#how-it-works,#summary,#sub-container {
+  #logo {
+    width: 90%;
+    margin: auto;
+  }
+  #reason-to-choose,#accolade,#how-it-works,#summary,#sub-container {
     width: 80%;
     margin: auto;
   }
