[Feature #160955531]Make webpages protected
- Logout a user
- Prevent unauthorized users from accessing protected webpages

--- a/client/css/loginPage.css
+++ b/client/css/loginPage.css
@@ -118,6 +118,14 @@ button {
   font-weight: 900;
   cursor: pointer;
 }
+#signup {
+  text-align: center;
+}
+#signup a {
+  text-decoration: none;
+  color: var(--dark);
+  font-weight: 900;
+}
 #footer {
   text-align: center;
   background: var(--primary);
