[Feature #160887554]Power get-menu page from back-end

--- a/client/css/loginPage.css
+++ b/client/css/loginPage.css
@@ -118,6 +118,11 @@ button {
   font-weight: 900;
   cursor: pointer;
 }
+button:disabled {
+  background: var(--primary-light);
+  font-size: 1em;
+  font-style: italic;
+}
 #signup {
   text-align: center;
 }
@@ -125,6 +130,7 @@ button {
   text-decoration: none;
   color: var(--dark);
   font-weight: 900;
+  font-style: italic;
 }
 #footer {
   text-align: center;
