--- a/client/css/userProfile.css
+++ b/client/css/userProfile.css
@@ -37,7 +37,7 @@ nav{
   display: flex;
   justify-content: space-between;
 }
-#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number, #logout {
+#logo a, #large-width-nav a, #small-width-nav a, #hamburger, #meal-number, .logout {
   text-decoration: none;
   color: var(--dark);
   display: block;
@@ -51,7 +51,7 @@ nav{
   border: 2px solid var(--dark);
   align-self: center;
 }
-#logout {
+.logout {
   background: var(--primary);
   color: var(--dark);
   margin: 0 1em;
@@ -61,10 +61,10 @@ nav{
   background: var(--primary-light);
   color: var(--dark)
 }
-#large-width-nav, #logout {
+#large-width-nav, .logout {
   display: none;
 }
-#large-width-nav a:hover, #logout:hover {
+#large-width-nav a:hover, .logout:hover {
   background: var(--dark);
   color: var(--primary);
 }
@@ -425,7 +425,7 @@ nav{
   #hamburger, #small-width-nav {
     display: none;
   }
-  #large-width-nav, #logout {
+  #large-width-nav, .logout {
     display: block;
   }
   #large-width-nav a {
